--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -1,7 +1,7 @@
 ---
-title: 'Contact | Code Stitch Web Designs'
-description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+title: 'Contact | Nur Nur Paradise'
+description: 'Find Nur Nur Paradise Thai restaurant in Kenilworth. Book a table, view our opening hours, or enquire about private dining and special occasions.'
+preloadImg: '/assets/images/banner.webp'
 permalink: 'contact/'
 eleventyNavigation:
     key: Contact Us
