--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@ eleventyNavigation:
                 <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/curry.jpg" | resize({width: 1028, height: 872}) | jpeg %}" type="image/jpeg">
                 <img src="{% getUrl "/assets/images/curry.jpg" | resize({width: 1028, height: 872}) | jpeg %}" alt="tom yum gung" width="522" height="461" loading="lazy" decoding="async" aria-hidden="true">
             </picture>
-            <img class="cs-seal" loading="lazy" decoding="async" src="/assets/svgs/seal.svg" alt="seal" width="190" height="190">
+            <img class="cs-seal" loading="lazy" decoding="async" src="/assets/svgs/logo-full.svg" alt="seal" width="190" height="190">
         </div>
         <div class="cs-content">
             <span class="cs-topper">Our Story</span>
