--- a/src/content/pages/menu-dinner.html
+++ b/src/content/pages/menu-dinner.html
@@ -3306,7 +3306,7 @@ eleventyNavigation:
                             <span class="cs-category">Light and refreshing rice noodles tossed with crunchy bean sprouts.</span>
                             <div class="cs-actions">
                                 <div class="cs-flex">
-                                    <span class="cs-price">N/A</span>
+                                    <span class="cs-price">£5.95</span>
                                     <div class="cs-stars">
                                         <!-- No chilli SVG as spice level is 0 -->
                                     </div>
@@ -3550,7 +3550,7 @@ eleventyNavigation:
                             <span class="cs-category">Soft, oven-baked flatbread—a fusion element perfect for enjoying with curry dishes.</span>
                             <div class="cs-actions">
                                 <div class="cs-flex">
-                                    <span class="cs-price">N/A</span>
+                                    <span class="cs-price">£3.20</span>
                                     <div class="cs-stars">
                                         <!-- No chilli SVG as spice level is 0 -->
                                     </div>
