--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 ---
-title: 'Nur Nur Paradise | Thai Restaurant| Kenilworth'
+title: 'Nur Nur Paradise | Thai Restaurant | Kenilworth'
 description: 'Experience authentic Thai cuisine at Nur Nur Paradise in Kenilworth. Our family-owned restaurant offers traditional flavours and fusion dishes in a welcoming atmosphere.'
 preloadImg: '/assets/images/hero.webp'
 permalink: '/'
@@ -84,7 +84,7 @@ eleventyNavigation:
             <h1 class="cs-title">Authentic Thai Fusion Restaurant in Kenilworth</h1>
             <div class="cs-flex-group">
                 <p class="cs-text">Fresh ingredients, authentic recipes and a warm, inviting atmosphere await at Nur Nur Paradise.</p>
-                <a href="/" class="cs-button-solid">Book Now</a>
+                <a href="/" class="cs-button-solid">Reserve Your Table</a>
             </div>
         </div>
     </div>
@@ -187,7 +187,7 @@ eleventyNavigation:
                 <span class="cs-spacer"></span>
                 Originally from Thailand, we chose Kenilworth for its vibrant community spirit and welcoming atmosphere. Our restaurant's name, "Nur Nur," translates as "delicious" in Thai—a promise we fulfill through every carefully crafted dish we serve.
             </p>
-            <a href="" class="cs-button-solid">Reserve Your Table</a>
+            <a href="/about/" class="cs-button-solid">About Us</a>
         </div>
     </div>
 </section>
@@ -249,6 +249,7 @@ eleventyNavigation:
                 </div>
             </li>
         </ul>
+        <a href="https://g.page/r/CdkoykyZiX3NEBM/review" target="_blank" rel="noopener" class="cs-button-solid">Leave A Review</a>
     </div>
 </section>
                                 
