--- a/src/content/pages/menu-dinner.html
+++ b/src/content/pages/menu-dinner.html
@@ -3547,7 +3547,7 @@ eleventyNavigation:
                         </div>
                         <div class="cs-details">
                             <h3 class="cs-name">Naan Bread</h3>
-                            <span class="cs-category">Soft, oven-baked flatbread—a fusion element perfect for enjoying with curry dishes.</span>
+                            <span class="cs-category">Soft, oven-baked flatbread a fusion element perfect for enjoying with curry dishes.</span>
                             <div class="cs-actions">
                                 <div class="cs-flex">
                                     <span class="cs-price">£3.20</span>
