blog and new menu

--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -1,8 +1,11 @@
 ---
-title: 'Blog | Code Stitch Web Designs'
+title: 'Promotions | Code Stitch Web Designs'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
-permalink: false
+preloadImg: '/assets/images/banner.webp'
+permalink: promotions/
+eleventyNavigation:
+    key: Promotions
+    order: 600
 
 ---
 
@@ -18,7 +21,7 @@ permalink: false
     <!-- ============================================ -->
 
     <section id="int-hero">
-        <h1 id="home-h">Blog</h1>
+        <h1 id="home-h">Promotions</h1>
        <picture>
             <source media="(max-width: 600px)" srcset="/assets/images/banner-m.webp">
             <source media="(min-width: 601px)" srcset="/assets/images/banner.webp">
