--- a/src/content/pages/menu-lunch.html
+++ b/src/content/pages/menu-lunch.html
@@ -1,9 +1,9 @@
 ---
 title: 'Lunch Menu'
-permalink: 'pdfs/lunch.pdf'
+permalink: false  # This prevents 11ty from generating a page
 eleventyNavigation:
-    key: Lunch
-    order: 3200
+    key: Lunch Menu
+    order: 3300
     parent: Menus
+    url: 'https://storage.googleapis.com/msgsndr/vCcvptsubXYzyOBXTQmC/media/67e03e6f9643c169015b715a.pdf'
 ---
-
