--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@ eleventyNavigation:
             <h1 class="cs-title">Authentic Thai Fusion Restaurant in Kenilworth</h1>
             <div class="cs-flex-group">
                 <p class="cs-text">Fresh ingredients, authentic recipes and a warm, inviting atmosphere await at Nur Nur Paradise.</p>
-                <a href="/" class="cs-button-solid">Reserve Your Table</a>
+                <a href="{{client.onlineBooking}}" target="_blank" rel="noopener" class="cs-button-solid">Reserve Your Table</a>
             </div>
         </div>
     </div>
