--- a/src/index.html
+++ b/src/index.html
@@ -133,18 +133,18 @@ eleventyNavigation:
         <div class="cs-wrapper">
             <picture class="cs-picture">
                 <!--Mobile Image -->
-                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/cashew.jpg" | resize({width: 576, height: 448}) | avif %}" type="image/avif">
-                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/cashew.jpg" | resize({width: 576, height: 448}) | webp %}" type="image/webp">
-                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/cashew.jpg" | resize({width: 576, height: 448}) | jpeg %}" type="image/jpeg">
+                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/food-4.jpg" | resize({width: 576, height: 448}) | avif %}" type="image/avif">
+                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/food-4.jpg" | resize({width: 576, height: 448}) | webp %}" type="image/webp">
+                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/food-4.jpg" | resize({width: 576, height: 448}) | jpeg %}" type="image/jpeg">
                 <!--Tablet Image -->
-                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/cashew.jpg" | resize({width: 880, height: 728}) | avif %}" type="image/avif">
-                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/cashew.jpg" | resize({width: 880, height: 728}) | webp %}" type="image/webp">
-                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/cashew.jpg" | resize({width: 880, height: 728}) | jpeg %}" type="image/jpeg">
+                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/food-4.jpg" | resize({width: 880, height: 728}) | avif %}" type="image/avif">
+                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/food-4.jpg" | resize({width: 880, height: 728}) | webp %}" type="image/webp">
+                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/food-4.jpg" | resize({width: 880, height: 728}) | jpeg %}" type="image/jpeg">
                 <!--Desktop Image -->
-                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/cashew.jpg" | resize({width: 1260, height: 834}) | avif %}" type="image/avif">
-                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/cashew.jpg" | resize({width: 1260, height: 834}) | webp %}" type="image/webp">
-                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/cashew.jpg" | resize({width: 1260, height: 834}) | jpeg %}" type="image/jpeg">
-                <img src="{% getUrl "/assets/images/cashew.jpg" | resize({width: 1260, height: 834}) | jpeg %}" alt="chicken cashew nut" width="630" height="414" loading="lazy" decoding="async" >
+                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/food-4.jpg" | resize({width: 1260, height: 834}) | avif %}" type="image/avif">
+                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/food-4.jpg" | resize({width: 1260, height: 834}) | webp %}" type="image/webp">
+                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/food-4.jpg" | resize({width: 1260, height: 834}) | jpeg %}" type="image/jpeg">
+                <img src="{% getUrl "/assets/images/food-4.jpg" | resize({width: 1260, height: 834}) | jpeg %}" alt="chicken cashew nut" width="630" height="414" loading="lazy" decoding="async" >
             </picture>
             <p class="cs-review">
                 <svg class="cs-quote" preserveAspectRatio="none" viewBox="0 0 100 93" fill="none" xmlns="http://www.w3.org/2000/svg"><g opacity=".4" clip-path="url(#a)" fill="var(--quoteColor)"><path d="M22.94 84H0L18.305.854H55L22.94 84ZM67.94 84H45L63.305.854H100L67.94 84Z"/></g><defs><clipPath id="a-1657"><path fill="#fff" transform="translate(0 .854)" d="M0 0h100v83.146H0z"/></clipPath></defs></svg>
@@ -163,18 +163,18 @@ eleventyNavigation:
         <div class="cs-image-group">
             <picture class="cs-picture">
                 <!--Mobile Image -->
-                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/curry.jpg" | resize({width: 528, height: 474}) | avif %}" type="image/avif">
-                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/curry.jpg" | resize({width: 528, height: 474}) | webp %}" type="image/webp">
-                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/curry.jpg" | resize({width: 528, height: 474}) | jpeg %}" type="image/jpeg">
+                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/food-2.jpg" | resize({width: 528, height: 474}) | avif %}" type="image/avif">
+                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/food-2.jpg" | resize({width: 528, height: 474}) | webp %}" type="image/webp">
+                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/food-2.jpg" | resize({width: 528, height: 474}) | jpeg %}" type="image/jpeg">
                 <!--Tablet Image -->
-                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/curry.jpg" | resize({width: 1552, height: 474}) | avif %}" type="image/avif">
-                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/curry.jpg" | resize({width: 1552, height: 474}) | webp %}" type="image/webp">
-                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/curry.jpg" | resize({width: 1552, height: 474}) | jpeg %}" type="image/jpeg">
+                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/food-2.jpg" | resize({width: 1552, height: 474}) | avif %}" type="image/avif">
+                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/food-2.jpg" | resize({width: 1552, height: 474}) | webp %}" type="image/webp">
+                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/food-2.jpg" | resize({width: 1552, height: 474}) | jpeg %}" type="image/jpeg">
                 <!--Desktop Image -->
-                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/curry.jpg" | resize({width: 1028, height: 872}) | avif %}" type="image/avif">
-                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/curry.jpg" | resize({width: 1028, height: 872}) | webp %}" type="image/webp">
-                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/curry.jpg" | resize({width: 1028, height: 872}) | jpeg %}" type="image/jpeg">
-                <img src="{% getUrl "/assets/images/curry.jpg" | resize({width: 1028, height: 872}) | jpeg %}" alt="tom yum gung" width="522" height="461" loading="lazy" decoding="async" aria-hidden="true">
+                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/food-2.jpg" | resize({width: 1028, height: 872}) | avif %}" type="image/avif">
+                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/food-2.jpg" | resize({width: 1028, height: 872}) | webp %}" type="image/webp">
+                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/food-2.jpg" | resize({width: 1028, height: 872}) | jpeg %}" type="image/jpeg">
+                <img src="{% getUrl "/assets/images/food-2.jpg" | resize({width: 1028, height: 872}) | jpeg %}" alt="tom yum gung" width="522" height="461" loading="lazy" decoding="async" aria-hidden="true">
             </picture>
             <img class="cs-seal" loading="lazy" decoding="async" src="/assets/svgs/logo-full.svg" alt="seal" width="190" height="190">
         </div>
@@ -380,18 +380,18 @@ eleventyNavigation:
             <h2 class="cs-title">Frequently Asked Questions</h2>
             <picture class="cs-picture">
                 <!--Mobile Image -->
-                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/pad-thai.jpg" | resize({width: 576, height: 720}) | avif %}" type="image/avif">
-                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/pad-thai.jpg" | resize({width: 576, height: 720}) | webp %}" type="image/webp">
-                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/pad-thai.jpg" | resize({width: 576, height: 720}) | jpeg %}" type="image/jpeg">
+                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/food-1.jpg" | resize({width: 576, height: 720}) | avif %}" type="image/avif">
+                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/food-1.jpg" | resize({width: 576, height: 720}) | webp %}" type="image/webp">
+                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/food-1.jpg" | resize({width: 576, height: 720}) | jpeg %}" type="image/jpeg">
                 <!--Tablet Image -->
-                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/pad-thai.jpg" | resize({width: 1168, height: 800}) | avif %}" type="image/avif">
-                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/pad-thai.jpg" | resize({width: 1168, height: 800}) | webp %}" type="image/webp">
-                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/pad-thai.jpg" | resize({width: 1168, height: 800}) | jpeg %}" type="image/jpeg">
+                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/food-1.jpg" | resize({width: 1168, height: 800}) | avif %}" type="image/avif">
+                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/food-1.jpg" | resize({width: 1168, height: 800}) | webp %}" type="image/webp">
+                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/food-1.jpg" | resize({width: 1168, height: 800}) | jpeg %}" type="image/jpeg">
                 <!--Desktop Image -->
-                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/pad-thai.jpg" | resize({width: 1024, height: 800}) | avif %}" type="image/avif">
-                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/pad-thai.jpg" | resize({width: 1024, height: 800}) | webp %}" type="image/webp">
-                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/pad-thai.jpg" | resize({width: 1024, height: 800}) | jpeg %}" type="image/jpeg">
-                <img src="{% getUrl "/assets/images/pad-thai.jpg" | resize({width: 1024, height: 800}) | jpeg %}" alt="pad thai noodles" width="522" height="400" loading="lazy" decoding="async">
+                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/food-1.jpg" | resize({width: 1024, height: 800}) | avif %}" type="image/avif">
+                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/food-1.jpg" | resize({width: 1024, height: 800}) | webp %}" type="image/webp">
+                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/food-1.jpg" | resize({width: 1024, height: 800}) | jpeg %}" type="image/jpeg">
+                <img src="{% getUrl "/assets/images/food-1.jpg" | resize({width: 1024, height: 800}) | jpeg %}" alt="pad thai noodles" width="522" height="400" loading="lazy" decoding="async">
             </picture>
         </div>
         <div class="cs-flex-group">
