--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,11 +1,12 @@
 ---
-title: 'About | Nur Nur Paradise'
+title: 'Our Story | Nur Nur Paradise'
 description: "Discover the story behind Nur Nur Paradise, Kenilworth's premier Thai restaurant. Founded by Lee and Chantana, we bring authentic Thai flavours to Warwickshire."
 preloadImg: '/assets/images/banner.webp'
 permalink: 'about/'
 eleventyNavigation:
-    key: About Us
-    order: 200
+    key: Our Story
+    order: 2100
+    parent: About Us
 ---
 
 {% extends "layouts/base.html" %}
