--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -5,7 +5,8 @@ preloadImg: '/assets/images/banner.webp'
 permalink: promotions/
 eleventyNavigation:
     key: Promotions
-    order: 600
+    order: 5100
+    parent: Member Benefits
 
 ---
 
