--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -5,7 +5,8 @@ preloadImg: '/assets/images/banner.webp'
 permalink: 'contact/'
 eleventyNavigation:
     key: Contact Us
-    order: 600
+    order: 2300
+    parent: About Us
 
 ---
 
