--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -5,7 +5,8 @@ preloadImg: '/assets/images/banner.webp'
 permalink: 'reviews/'
 eleventyNavigation:
     key: Reviews
-    order: 500
+    order: 2200
+    parent: About Us
 ---
 
 {% extends "layouts/base.html" %}
