--- a/src/content/pages/membership-join.html
+++ b/src/content/pages/membership-join.html
@@ -1,6 +1,6 @@
 ---
 title: 'Membership Join | Nur Nur Paradise'
-description: 'Find Nur Nur Paradise Thai restaurant in Kenilworth. Book a table, view our opening hours, or enquire about private dining and special occasions.'
+description: 'Nur Nur Paradise Membership Program Joined'
 preloadImg: '/assets/images/banner.webp'
 permalink: 'membership-join/'
 eleventyNavigation:
@@ -37,10 +37,25 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">Membership</span>
-            <h2 class="cs-title">Thank You For Joining Nur Nur Paradise Membership Program</h2>
+            <h2 class="cs-title">Welcome to Nur Nur Paradise Membership!</h2>
             <p class="cs-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nisl eget ultricies tincidunt, nunc nisl aliquam nisl, eget aliquam nisl nisl eget nisl. Sed vitae nisl eget nisl aliquam aliquam. Sed vitae nisl eget nisl aliquam aliquam. Nullam auctor, nisl eget ultricies tincidunt, nunc nisl aliquam nisl, eget aliquam nisl nisl eget nisl. Sed vitae nisl eget nisl aliquam aliquam. Sed vitae nisl eget nisl aliquam aliquam. Nullam auctor, nisl eget ultricies tincidunt, nunc nisl aliquam nisl, eget aliquam nisl nisl eget nisl. Sed vitae nisl eget nisl aliquam aliquam.
+                Your unique membership code will be sent to your email address within the next 24 hours. Please keep this code handy when making reservations to ensure all your membership benefits are applied.
             </p>
+            <h3 class="h3">What Happens Next</h3>
+            <ul id="list-825" class="cs-ul">
+                <li class="cs-li">
+                    <span class="cs-number">1</span>
+                    Check your inbox for your confirmation email with your membership code
+                </li>
+                <li class="cs-li">
+                    <span class="cs-number">2</span>
+                    Start enjoying your exclusive benefits on your next visit
+                </li>
+                <li class="cs-li">
+                    <span class="cs-number">3</span>
+                    Explore our current seasonal&nbsp;<a href="/promotions/">promotions.</a>
+                </li>
+            </ul>                
         </div>
     </div>
 </section>
