--- a/src/content/pages/membership.html
+++ b/src/content/pages/membership.html
@@ -1,8 +1,8 @@
 ---
 title: 'Membership | Nur Nur Paradise'
-description: 'Find Nur Nur Paradise Thai restaurant in Kenilworth. Book a table, view our opening hours, or enquire about private dining and special occasions.'
+description: 'Nur Nur Paradise Membership Program'
 preloadImg: '/assets/images/banner.webp'
-permalink: 'Membership/'
+permalink: 'membership/'
 eleventyNavigation:
     key: Membership
     order: 5200
@@ -41,7 +41,10 @@ eleventyNavigation:
             <span class="cs-topper">Membership</span>
             <h2 class="cs-title">Nur Nur Paradise Membership Program</h2>
             <p class="cs-text">
-                748C6DLorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nisl eget ultricies tincidunt, nunc nisl aliquam nisl, eget aliquam nisl nisl eget nisl. Sed vitae nisl eget nisl aliquam aliquam. Sed vitae nisl eget nisl aliquam aliquam. Nullam auctor, nisl eget ultricies tincidunt, nunc nisl aliquam nisl, eget aliquam nisl nisl eget nisl. Sed vitae nisl eget nisl aliquam aliquam. Sed vitae nisl eget nisl aliquam aliquam. Nullam auctor, nisl eget ultricies tincidunt, nunc nisl aliquam nisl, eget aliquam nisl nisl eget nisl. Sed vitae nisl eget nisl aliquam aliquam.
+                We are delighted to introduce the Nur Nur Paradise Membership Program, designed exclusively for our valued guests - free of charge. This complimentary membership provides access to an array of exceptional benefits that enhance your dining experience at Kenilworth's premier Thai fusion restaurant.
+            </p>
+            <p class="cs-text">
+                Becoming a member grants you access to numerous exclusive privileges, including 20% discount on our À La Carte Menu during weekdays, signature cocktail promotions with Buy One, Get One Free Happy Hour, 50% off your birthday meal during your birthday month, seasonal offers and special event invitations, plus priority booking for popular dining dates.
             </p>
         </div>
     </div>
