--- a/src/content/pages/menu-dinner.html
+++ b/src/content/pages/menu-dinner.html
@@ -1539,18 +1539,18 @@ eleventyNavigation:
                         <div class="cs-picture-group">
                             <picture class="cs-picture">
                                 <!--Mobile Image -->
-                                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/m5.jpg" | resize({width: 560, height: 660}) | avif %}" type="image/avif">
-                                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/m5.jpg" | resize({width: 560, height: 660}) | webp %}" type="image/webp">
-                                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/m5.jpg" | resize({width: 560, height: 660}) | jpeg %}" type="image/jpeg">
+                                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/duck-oyster.jpg" | resize({width: 560, height: 660}) | avif %}" type="image/avif">
+                                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/duck-oyster.jpg" | resize({width: 560, height: 660}) | webp %}" type="image/webp">
+                                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/duck-oyster.jpg" | resize({width: 560, height: 660}) | jpeg %}" type="image/jpeg">
                                 <!--Tablet Image -->
-                                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/m5.jpg" | resize({width: 570, height: 472}) | avif %}" type="image/avif">
-                                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/m5.jpg" | resize({width: 570, height: 472}) | webp %}" type="image/webp">
-                                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/m5.jpg" | resize({width: 570, height: 472}) | jpeg %}" type="image/jpeg">
+                                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/duck-oyster.jpg" | resize({width: 570, height: 472}) | avif %}" type="image/avif">
+                                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/duck-oyster.jpg" | resize({width: 570, height: 472}) | webp %}" type="image/webp">
+                                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/duck-oyster.jpg" | resize({width: 570, height: 472}) | jpeg %}" type="image/jpeg">
                                 <!--Desktop Image -->
-                                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/m5.jpg" | resize({width: 760, height: 640}) | avif %}" type="image/avif">
-                                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/m5.jpg" | resize({width: 760, height: 640}) | webp %}" type="image/webp">
-                                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/m5.jpg" | resize({width: 760, height: 640}) | jpeg %}" type="image/jpeg">
-                                <img src="{% getUrl "/assets/images/m5.jpg" | resize({width: 760, height: 640}) | jpeg %}" alt="menu image placeholder" width="380" height="320" loading="lazy" decoding="async">
+                                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/duck-oyster.jpg" | resize({width: 760, height: 640}) | avif %}" type="image/avif">
+                                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/duck-oyster.jpg" | resize({width: 760, height: 640}) | webp %}" type="image/webp">
+                                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/duck-oyster.jpg" | resize({width: 760, height: 640}) | jpeg %}" type="image/jpeg">
+                                <img src="{% getUrl "/assets/images/duck-oyster.jpg" | resize({width: 760, height: 640}) | jpeg %}" alt="menu image placeholder" width="380" height="320" loading="lazy" decoding="async">
                             </picture>
                             
                             <span class="cs-offer">Members 20% off weekdays</span>
@@ -1603,18 +1603,18 @@ eleventyNavigation:
                         <div class="cs-picture-group">
                             <picture class="cs-picture">
                                 <!--Mobile Image -->
-                                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/m6.jpg" | resize({width: 560, height: 660}) | avif %}" type="image/avif">
-                                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/m6.jpg" | resize({width: 560, height: 660}) | webp %}" type="image/webp">
-                                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/m6.jpg" | resize({width: 560, height: 660}) | jpeg %}" type="image/jpeg">
+                                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/duck-ginger.jpg" | resize({width: 560, height: 660}) | avif %}" type="image/avif">
+                                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/duck-ginger.jpg" | resize({width: 560, height: 660}) | webp %}" type="image/webp">
+                                <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/duck-ginger.jpg" | resize({width: 560, height: 660}) | jpeg %}" type="image/jpeg">
                                 <!--Tablet Image -->
-                                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/m6.jpg" | resize({width: 570, height: 472}) | avif %}" type="image/avif">
-                                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/m6.jpg" | resize({width: 570, height: 472}) | webp %}" type="image/webp">
-                                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/m6.jpg" | resize({width: 570, height: 472}) | jpeg %}" type="image/jpeg">
+                                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/duck-ginger.jpg" | resize({width: 570, height: 472}) | avif %}" type="image/avif">
+                                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/duck-ginger.jpg" | resize({width: 570, height: 472}) | webp %}" type="image/webp">
+                                <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/duck-ginger.jpg" | resize({width: 570, height: 472}) | jpeg %}" type="image/jpeg">
                                 <!--Desktop Image -->
-                                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/m6.jpg" | resize({width: 760, height: 640}) | avif %}" type="image/avif">
-                                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/m6.jpg" | resize({width: 760, height: 640}) | webp %}" type="image/webp">
-                                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/m6.jpg" | resize({width: 760, height: 640}) | jpeg %}" type="image/jpeg">
-                                <img src="{% getUrl "/assets/images/m6.jpg" | resize({width: 760, height: 640}) | jpeg %}" alt="menu image placeholder" width="380" height="320" loading="lazy" decoding="async">
+                                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/duck-ginger.jpg" | resize({width: 760, height: 640}) | avif %}" type="image/avif">
+                                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/duck-ginger.jpg" | resize({width: 760, height: 640}) | webp %}" type="image/webp">
+                                <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/duck-ginger.jpg" | resize({width: 760, height: 640}) | jpeg %}" type="image/jpeg">
+                                <img src="{% getUrl "/assets/images/duck-ginger.jpg" | resize({width: 760, height: 640}) | jpeg %}" alt="menu image placeholder" width="380" height="320" loading="lazy" decoding="async">
                             </picture>
                             
                             <span class="cs-offer">Members 20% off weekdays</span>
